--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
         "vue": "^2.5.7"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-free": "^5.1.0",
         "bulma": "^0.7.1",
+        "font-awesome": "^4.7.0",
         "vue-router": "^3.0.1"
     }
 }
